# ros_autonomous_car

./: .gitignore  CMakeLists.txt  README.md  deepseek_rosStruct20250706.txt  install.sh  run_autonomous_system.sh  test_autonomous_system.sh
lane_follower_pkg/: CMakeLists.txt  package.xml
lane_follower_pkg/arduino/: arduino_code.ino
lane_follower_pkg/config/: camera_params.yaml  diagnostics.yaml.txt  lidar_params.yaml
lane_follower_pkg/launch/: integrated_system.launch  lane_follower.launch  sensors.launch
lane_follower_pkg/nodes/: system_monitor.py
lane_follower_pkg/rviz/: enhanced_lane_follower.rviz  navigation.rviz
lane_follower_pkg/scripts/: diagnostics_monitor.py  enhanced_lane_follower.py  navigation_node.py
