<?xml version="1.0"?>
<package format="2">
  <name>lane_follower_pkg</name>
  <version>1.0.0</version>
  <description>Integrated autonomous driving package with lane following and obstacle avoidance</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
</package>